[gd_scene load_steps=30 format=2]

[ext_resource path="res://GameFlow/Tutorials/FirstTutorial/first_tutorial_select_planet.gd" type="Script" id=1]
[ext_resource path="res://Assets/textures/planets/DarkRedClick.png" type="Texture" id=2]
[ext_resource path="res://Assets/textures/station_explored.png" type="Texture" id=3]
[ext_resource path="res://Assets/textures/planets/RedLeftClick.png" type="Texture" id=4]
[ext_resource path="res://Assets/textures/red_pandas/spaceman_red_panda_rescue.jpeg" type="Texture" id=5]
[ext_resource path="res://Assets/textures/planets/MoonPlanetRotation.png" type="Texture" id=6]
[ext_resource path="res://Assets/textures/planets/GasGiant.png" type="Texture" id=7]
[ext_resource path="res://Assets/textures/planets/EarthAtlas.png" type="Texture" id=8]
[ext_resource path="res://Assets/materials/Outline2D.tres" type="Material" id=9]
[ext_resource path="res://Node/EdgeHardcoded.tscn" type="PackedScene" id=10]
[ext_resource path="res://GameFlow/DialogueDisplayer.tscn" type="PackedScene" id=11]
[ext_resource path="res://Assets/animations/ShipFlyingAround.tscn" type="PackedScene" id=12]
[ext_resource path="res://Assets/textures/Background.tscn" type="PackedScene" id=13]
[ext_resource path="res://Node/hightlight_node_with_frequency_and_bool.gdshader" type="Shader" id=14]
[ext_resource path="res://Node/graph_node.gd" type="Script" id=15]
[ext_resource path="res://GameFlow/command_methods_scripts/intro_dialogue.gd" type="Script" id=16]

[sub_resource type="CircleShape2D" id=19]
radius = 39.3722

[sub_resource type="ShaderMaterial" id=20]
resource_local_to_scene = true
shader = ExtResource( 14 )
shader_param/assigned_color = Plane( 1, 1, 1, 1 )
shader_param/WHITE = Plane( 1, 1, 1, 0.2 )
shader_param/FREQ = 3.0
shader_param/highlight = 0.0
shader_param/amplitude = 0.1

[sub_resource type="GDScript" id=36]
script/source = "extends Sprite


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.

"

[sub_resource type="Animation" id=22]
resource_name = "ClickNode"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("MouseButtonLeft:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.1, 2 ),
"transitions": PoolRealArray( 2.92817, 1, 1.51572 ),
"update": 0,
"values": [ Vector2( 48, 72 ), Vector2( 44, 60 ), Vector2( 32, 48 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MouseButtonLeft:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}

[sub_resource type="Animation" id=23]
resource_name = "NodeBeingSelected"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/StationSimple:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/StationSimple:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=24]
length = 0.001

[sub_resource type="SpriteFrames" id=26]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="ShaderMaterial" id=29]
resource_local_to_scene = true
shader = ExtResource( 14 )
shader_param/assigned_color = Plane( 1, 1, 1, 1 )
shader_param/WHITE = Plane( 1, 1, 1, 0.2 )
shader_param/FREQ = 3.0
shader_param/highlight = 0.0
shader_param/amplitude = 0.1

[sub_resource type="Animation" id=30]
resource_name = "ClickNode"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("MouseButtonLeft:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.1, 2 ),
"transitions": PoolRealArray( 2.92817, 1, 1.51572 ),
"update": 0,
"values": [ Vector2( 48, 72 ), Vector2( 44, 60 ), Vector2( 32, 48 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MouseButtonLeft:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}

[sub_resource type="Animation" id=31]
resource_name = "NodeBeingSelected"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/StationSimple:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/StationSimple:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=32]
length = 0.001

[sub_resource type="Animation" id=35]
resource_name = "OnReady"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=33]
resource_name = "WinAnimation"
tracks/0/type = "value"
tracks/0/path = NodePath("WinAnimationCanvas/TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WinAnimationCanvas/TextureRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "on_win_audio_play"
} ]
}

[node name="TutorialNode" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" parent="." instance=ExtResource( 13 )]

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="Planet1" type="KinematicBody2D" parent="ColorRect"]
show_behind_parent = true
use_parent_material = true
position = Vector2( 504, 176 )
scale = Vector2( 2, 2 )
input_pickable = true
script = ExtResource( 15 )
index = 2

[node name="Area2D" type="Area2D" parent="ColorRect/Planet1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ColorRect/Planet1/Area2D"]
shape = SubResource( 19 )

[node name="Sprite" type="Node2D" parent="ColorRect/Planet1"]
material = SubResource( 20 )
use_parent_material = true

[node name="StationSimple" type="Sprite" parent="ColorRect/Planet1/Sprite"]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
use_parent_material = true
position = Vector2( 0, -1.43051e-06 )
scale = Vector2( 0.479042, 0.479042 )
z_index = 1
texture = ExtResource( 3 )

[node name="SpriteTexture" type="Sprite" parent="ColorRect/Planet1/Sprite"]
material = ExtResource( 9 )
z_index = -1
texture = ExtResource( 8 )
hframes = 4
script = SubResource( 36 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ColorRect/Planet1"]
anims/ClickNode = SubResource( 22 )
anims/NodeBeingSelected = SubResource( 23 )
anims/RESET = SubResource( 24 )

[node name="MouseButtonLeft" type="AnimatedSprite" parent="ColorRect/Planet1"]
visible = false
position = Vector2( 48, 72 )
frames = SubResource( 26 )
speed_scale = 0.5

[node name="Planet2" type="KinematicBody2D" parent="ColorRect"]
show_behind_parent = true
use_parent_material = true
position = Vector2( 1144, 168 )
scale = Vector2( 2, 2 )
input_pickable = true
script = ExtResource( 15 )
index = 1

[node name="Area2D" type="Area2D" parent="ColorRect/Planet2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ColorRect/Planet2/Area2D"]
shape = SubResource( 19 )

[node name="Sprite" type="Node2D" parent="ColorRect/Planet2"]
use_parent_material = true

[node name="SpriteTexture" type="Sprite" parent="ColorRect/Planet2/Sprite"]
material = ExtResource( 9 )
z_index = -1
texture = ExtResource( 7 )
hframes = 4
region_rect = Rect2( 0, 0, 80, 80 )

[node name="StationSimple" type="Sprite" parent="ColorRect/Planet2/Sprite"]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
use_parent_material = true
position = Vector2( 0, -1.43051e-06 )
scale = Vector2( 0.479042, 0.479042 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ColorRect/Planet2"]
anims/ClickNode = SubResource( 22 )
anims/NodeBeingSelected = SubResource( 23 )
anims/RESET = SubResource( 24 )

[node name="MouseButtonLeft" type="AnimatedSprite" parent="ColorRect/Planet2"]
visible = false
position = Vector2( 32, 48 )
frames = SubResource( 26 )
frame = 1
speed_scale = 0.5
playing = true

[node name="StartingNode" type="KinematicBody2D" parent="ColorRect"]
show_behind_parent = true
position = Vector2( 800, 500 )
scale = Vector2( 2, 2 )
input_pickable = true
script = ExtResource( 15 )

[node name="Area2D" type="Area2D" parent="ColorRect/StartingNode"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ColorRect/StartingNode/Area2D"]
shape = SubResource( 19 )

[node name="Sprite" type="Node2D" parent="ColorRect/StartingNode"]
material = SubResource( 29 )

[node name="SpriteTexture" type="Sprite" parent="ColorRect/StartingNode/Sprite"]
material = ExtResource( 9 )
position = Vector2( 0, -4 )
texture = ExtResource( 6 )
hframes = 4
region_rect = Rect2( 0, 0, 80, 80 )

[node name="StationSimple" type="Sprite" parent="ColorRect/StartingNode/Sprite"]
show_behind_parent = true
position = Vector2( 0, -1.43051e-06 )
scale = Vector2( 0.479042, 0.479042 )
z_index = 1
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ColorRect/StartingNode"]
anims/ClickNode = SubResource( 30 )
anims/NodeBeingSelected = SubResource( 31 )
anims/RESET = SubResource( 32 )

[node name="MouseButtonLeft" type="AnimatedSprite" parent="ColorRect/StartingNode"]
visible = false
position = Vector2( 48, 72 )
frames = SubResource( 26 )
speed_scale = 0.5

[node name="ShipFlyingAroundCenter" parent="ColorRect/StartingNode" instance=ExtResource( 12 )]
scale = Vector2( 0.2, 0.2 )
radius = 350.0
angle = 0.0
rotation_speed_factor = 2.5

[node name="Edge1S" parent="ColorRect" instance=ExtResource( 10 )]
show_behind_parent = true
weight = 0.0
nodeA = NodePath("../Planet1")
nodeB = NodePath("../StartingNode")

[node name="Edge2S" parent="ColorRect" instance=ExtResource( 10 )]
show_behind_parent = true
weight = 0.0
nodeA = NodePath("../Planet2")
nodeB = NodePath("../StartingNode")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/OnReady = SubResource( 35 )
anims/WinAnimation = SubResource( 33 )

[node name="WinAnimationCanvas" type="CanvasLayer" parent="."]
layer = 3

[node name="TextureRect" type="TextureRect" parent="WinAnimationCanvas"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 402.0
margin_top = -66.0
margin_right = -192.0
margin_bottom = 390.0
mouse_filter = 2
texture = ExtResource( 5 )

[node name="DialogueCanvas" type="CanvasLayer" parent="."]
layer = 10

[node name="DialogueDisplayer" parent="DialogueCanvas" instance=ExtResource( 11 )]
anchor_left = 0.125
anchor_right = 0.875
anchor_bottom = 0.886
dialogues_to_show = [ "Here are some red pandas expecting to be rescued.
Visit each planet to rescue the red pandas in those planets" ]
command_methods_script = ExtResource( 16 )

[connection signal="input_event" from="ColorRect/Planet1/Area2D" to="ColorRect/Planet1" method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="ColorRect/Planet1/Area2D" to="ColorRect/Planet1" method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect/Planet1/Area2D" to="ColorRect/Planet1" method="_on_Area2D_mouse_exited"]
[connection signal="input_event" from="ColorRect/Planet2/Area2D" to="ColorRect/Planet2" method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="ColorRect/Planet2/Area2D" to="ColorRect/Planet2" method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect/Planet2/Area2D" to="ColorRect/Planet2" method="_on_Area2D_mouse_exited"]
[connection signal="input_event" from="ColorRect/StartingNode/Area2D" to="ColorRect/StartingNode" method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="ColorRect/StartingNode/Area2D" to="ColorRect/StartingNode" method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect/StartingNode/Area2D" to="ColorRect/StartingNode" method="_on_Area2D_mouse_exited"]
